ci: upload pre-release on every push to main (#251)

--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -1,6 +1,9 @@
 # Workflow to fetch the latest commit hash on the main branch and upload artifacts to CF storage.
-name: Build and upload from main
+name: Build and upload pre-release
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
