--- a/.github/workflows/codecov.yaml
+++ b/.github/workflows/codecov.yaml
@@ -47,3 +47,4 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: lcov.info
           fail_ci_if_error: true
+        continue-on-error: true
