--- a/contracts/stellar-multicall/Cargo.toml
+++ b/contracts/stellar-multicall/Cargo.toml
@@ -14,6 +14,7 @@ stellar-axelar-std = { workspace = true }
 [dev-dependencies]
 goldie = { workspace = true }
 soroban-sdk = { workspace = true, features = ["testutils"] }
+stellar-axelar-std = { workspace = true, features = ["testutils"] }
 
 [features]
 library = []
