--- a/packages/stellar-axelar-std/Cargo.toml
+++ b/packages/stellar-axelar-std/Cargo.toml
@@ -12,18 +12,18 @@ crate-type = ["rlib"]
 [dependencies]
 hex = { workspace = true, optional = true }
 soroban-sdk = { workspace = true }
-soroban-token-sdk = { workspace = true }
+serde = { workspace = true, optional = true }
 stellar-axelar-std-derive = { workspace = true, optional = true }
+goldie = { workspace = true, optional = true }
 
 [dev-dependencies]
-goldie = { workspace = true }
 hex = { workspace = true }
 paste = { workspace = true }
 soroban-sdk = { workspace = true, features = ["testutils"] }
 stellar-axelar-std-derive = { workspace = true }
 
 [features]
-testutils = ["soroban-sdk/testutils", "dep:hex"]
+testutils = ["soroban-sdk/testutils", "dep:hex", "dep:goldie", "dep:serde"]
 derive = ["dep:stellar-axelar-std-derive"]
 alloc = ["soroban-sdk/alloc"]
 
