--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["contracts/*", "packages/*"]
+members = ["contracts/*", "packages/*", "contracts/stellar-upgrader/src/tests/testdata/*"]
 
 [workspace.package]
 edition = "2021"
@@ -20,6 +20,7 @@ hex = { version = "0.4", default-features = false }
 paste = { version = "1.0", default-features = false }
 proc-macro2 = { version = "1.0", default-features = false }
 rand = { version = "0.8.5", default-features = false }
+serde = { version = "1.0.152", default-features = false, features = ["derive"] }
 soroban-sdk = { version = "22.0.6" }
 soroban-token-sdk = { version = "22.0.6" }
 stellar-axelar-example = { version = "^1.0.0", path = "contracts/stellar-axelar-example" }
