refactor: remove soroban-sdk from stellar-axelar-gateway

--- a/contracts/stellar-axelar-gateway/Cargo.toml
+++ b/contracts/stellar-axelar-gateway/Cargo.toml
@@ -13,7 +13,6 @@ crate-type = ["cdylib", "rlib"]
 cfg-if = { workspace = true }
 ed25519-dalek = { version = "^2.1", default-features = false, optional = true }
 rand = { workspace = true, optional = true }
-soroban-sdk = { workspace = true }
 stellar-axelar-std = { workspace = true }
 
 [dev-dependencies]
@@ -24,12 +23,11 @@ hex-literal = "0.4"
 paste = { workspace = true }
 rand = { workspace = true }
 rand_chacha = { version = "0.3" }
-soroban-sdk = { workspace = true, features = ["testutils"] }
 stellar-axelar-std = { workspace = true, features = ["testutils"] }
 
 [features]
 library = [] # Only export the contract interface
-testutils = ["soroban-sdk/testutils", "stellar-axelar-std/testutils", "dep:ed25519-dalek", "dep:rand"]
+testutils = ["stellar-axelar-std/testutils", "dep:ed25519-dalek", "dep:rand"]
 
 [lints]
 workspace = true
