feat: check authorization at the root in the upgrader contract (#294)
Co-authored-by: Milap Sheth <milap@interoplabs.io>

--- a/contracts/stellar-upgrader/Cargo.toml
+++ b/contracts/stellar-upgrader/Cargo.toml
@@ -15,7 +15,7 @@ soroban-sdk = { workspace = true }
 stellar-axelar-std = { workspace = true }
 
 [dev-dependencies]
-goldie = { workspace = true }
+dummy-contract = { path = "src/tests/testdata/dummy-contract" }
 soroban-sdk = { workspace = true, features = ["testutils"] }
 
 [features]
