--- a/packages/stellar-axelar-std/Cargo.toml
+++ b/packages/stellar-axelar-std/Cargo.toml
@@ -13,14 +13,14 @@ crate-type = ["rlib"]
 goldie = { workspace = true, optional = true }
 hex = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
-soroban-sdk = { workspace = true }
+soroban-sdk = { version = "22.0.6" }
 stellar-axelar-std-derive = { workspace = true, optional = true }
 
 [dev-dependencies]
 goldie = { workspace = true }
 hex = { workspace = true }
 paste = { workspace = true }
-soroban-sdk = { workspace = true, features = ["testutils"] }
+soroban-sdk = { version = "22.0.6", features = ["testutils"] }
 stellar-axelar-std-derive = { workspace = true }
 
 [features]
