--- a/contracts/stellar-multicall/Cargo.toml
+++ b/contracts/stellar-multicall/Cargo.toml
@@ -6,18 +6,20 @@ description = "Multicall contract, responsible for executing multiple contract c
 license = { workspace = true }
 publish = true
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 cfg-if = { workspace = true }
-soroban-sdk = { workspace = true }
-stellar-axelar-std = { workspace = true }
+stellar-axelar-std = { workspace = true, features = ["derive"] }
 
 [dev-dependencies]
 goldie = { workspace = true }
-soroban-sdk = { workspace = true, features = ["testutils"] }
 stellar-axelar-std = { workspace = true, features = ["testutils"] }
 
 [features]
 library = []
+testutils = ["stellar-axelar-std/testutils"]
 
 [lints]
 workspace = true
