--- a/packages/stellar-axelar-std-derive/Cargo.toml
+++ b/packages/stellar-axelar-std-derive/Cargo.toml
@@ -17,7 +17,7 @@ itertools = "0.14"
 prettyplease = { version = "0.2", default-features = false }
 proc-macro2 = { workspace = true }
 quote = { version = "1.0", default-features = false }
-syn = { version = "2.0", default-features = false, features = ["derive", "extra-traits", "full", "parsing"] }
+syn = { version = "2.0", default-features = false, features = ["derive", "extra-traits", "full", "parsing", "printing", "proc-macro"] }
 
 [dev-dependencies]
 goldie = { workspace = true }
