--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -17,7 +17,7 @@ jobs:
     runs-on: blacksmith-4vcpu-ubuntu-2204
     env:
       RUST_BACKTRACE: 1
-      RUSTFLAGS: "-D warnings -A dead_code"
+      RUSTFLAGS: "-D warnings"
 
     steps:
       - uses: actions/checkout@v4
