--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: Compile and Test
+name: Test
 
 on:
   pull_request:
@@ -12,36 +12,6 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  compile:
-    name: Compile
-    runs-on: blacksmith-4vcpu-ubuntu-2204
-    env:
-      RUST_BACKTRACE: 1
-      RUSTFLAGS: "-D warnings"
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: 1.81.0
-          targets: wasm32-unknown-unknown
-
-      - name: Rust Cache
-        uses: useblacksmith/rust-cache@v3.0.1
-        with:
-          shared-key: "cache-compilation"
-
-      - name: Build contracts
-        run: for C in contracts/*; do cd $C; cargo build --locked --release; cd ../../ ; done
-
-      - name: Build packages
-        run: for C in packages/*; do cd $C; cargo build --locked --release; cd ../../ ; done
-
-      - name: Build wasm release
-        run: cargo wasm
-
   test:
     name: Test Suite
     needs: compile
