--- a/.release-plz.toml
+++ b/.release-plz.toml
@@ -27,6 +27,10 @@ Changes:
 """
 
 [[package]]
+name = "dummy-contract"
+release = false # don't process this package
+
+[[package]]
 name = "dummy-contract-after-upgrade"
 release = false # don't process this package
 
