--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,8 +1,6 @@
 # This workflow creates a github release using release-plz, and publishes it as a rust crates and also create the necessary artifacts (wasm).
 # It's triggered once a release PR (created by the create-release-pr workflow) gets merged to other release branches.
-
 name: Release
-
 on:
   # Once the PR gets merged to `main` or other `releases` branches
   pull_request:
@@ -12,24 +10,20 @@ on:
     types: [closed]
 
   workflow_dispatch:
-    inputs:
-      skip-publish-release:
-        description: "Skip publish release"
-        required: false
-        default: "false"
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
+  # Publishes a release in case the release isn't published
   publish-release:
     name: Publish releases
 
+    # Add checks to see if the merged PR is a release.
     if: |
-      (github.event_name == 'workflow_dispatch') ||
-      (github.event.pull_request.merged == true &&
+      ((github.event.pull_request.merged == true) &&
       contains(github.event.pull_request.labels.*.name, 'release'))
 
-    runs-on: blacksmith-4vcpu-ubuntu-2204
+    runs-on: blacksmith-2vcpu-ubuntu-2204
 
     outputs:
       releases: ${{ steps.prepare-matrix.outputs.releases }}
@@ -41,29 +35,20 @@ jobs:
         with:
           token: ${{ secrets.PAT_TOKEN }}
 
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+
       - name: Get commit hash
         id: get-commit-hash
         run: echo "hash=$(git rev-parse HEAD)" >> "$GITHUB_OUTPUT"
 
-      - name: Dry-run
-        id: dry-run
-        if: ${{ github.event_name != 'workflow_dispatch' || github.event.inputs.skip-publish-release != 'true' }}
-        uses: MarcoIeni/release-plz-action@fff938ea2923fdfa35797fff63537b00f30fe6f9 # v0.5.82
-        with:
-          command: release --dry-run
-          version: "0.3.123"
-        env:
-          CARGO_NET_GIT_FETCH_WITH_CLI: true
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-
+      # Creates git tags and publishes the crates of the new releases
       - name: Publish release
         id: publish-release
-        if: ${{ github.event_name != 'workflow_dispatch' || github.event.inputs.skip-publish-release != 'true' }}
-        uses: MarcoIeni/release-plz-action@fff938ea2923fdfa35797fff63537b00f30fe6f9
+        uses: MarcoIeni/release-plz-action@fff938ea2923fdfa35797fff63537b00f30fe6f9 # v0.5.82
         with:
           command: release
-          version: "0.3.123"
+          version: "0.3.105"
         env:
           CARGO_NET_GIT_FETCH_WITH_CLI: true
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
@@ -72,38 +57,7 @@ jobs:
       - name: Prepare JSON output to be a matrix GHA format
         id: prepare-matrix
         run: |
-          if [ "${{ github.event_name }}" == "workflow_dispatch" ] && [ "${{ github.event.inputs.skip-publish-release }}" == "true" ]; then
-            echo "Generating releases from Cargo.toml using grep/sed"
-            releases_json="[]"
-
-            for file in contracts/*/Cargo.toml packages/*/Cargo.toml; do
-              if [ -f "$file" ]; then
-                name=$(grep -E '^name\s*=' "$file" | sed -E 's/.*=\s*"(.*)"/\1/' | head -1)
-                version=$(grep -E '^version\s*=' "$file" | sed -E 's/.*=\s*"(.*)"/\1/' | head -1)
-                if [ -n "$name" ] && [ -n "$version" ]; then
-                  tag="${name}-v${version}"
-                  release="{\"package_name\":\"$name\",\"prs\":[],\"tag\":\"$tag\",\"version\":\"$version\"}"
-                  releases_json=$(echo "$releases_json" | jq ". + [$release]")
-                fi
-              fi
-            done
-
-            releases=$(echo "$releases_json" | jq -c '.')
-            echo "Parsed releases from Cargo.toml files: $releases"
-            echo "releases=$releases" >> "$GITHUB_OUTPUT"
-
-          else
-            releases_json='${{ steps.publish-release.outputs.releases }}'
-            releases=$(echo "$releases_json" | jq -c '.')
-
-            if [ "$releases" == "[]" ]; then
-              echo "release-plz output contains an empty release list — exiting early."
-              exit 1
-            else
-              echo "Parsed releases from release-plz: $releases"
-              echo "releases=$releases" >> "$GITHUB_OUTPUT"
-            fi
-          fi
+          echo "releases=$(echo '${{ steps.publish-release.outputs.releases }}' | jq -c '.')" >> $GITHUB_OUTPUT
 
   build:
     needs: publish-release
