--- a/.github/workflows/release-dry-run.yaml
+++ b/.github/workflows/release-dry-run.yaml
@@ -1,16 +1,9 @@
 # This workflow performs a dry-run release using release-plz
-# when a release PR is opened (not merged). It helps verify the release without publishing.
 
 name: Dry-Run Release
 
 on:
-  pull_request:
-    branches:
-      - main
-      - "releases/**"
-    types: [opened] # Triggers when PR is opened
-
-  workflow_dispatch: # Optional manual trigger
+  workflow_dispatch: # Manual trigger only
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -18,11 +11,7 @@ jobs:
   dry-run-release:
     name: Dry-Run Release
 
-    if: |
-      github.event_name == 'workflow_dispatch' ||
-      (github.event.pull_request.merged == false && contains(github.event.pull_request.labels.*.name, 'release'))
-
-    runs-on: blacksmith-4vcpu-ubuntu-2204
+    runs-on: blacksmith-2vcpu-ubuntu-2204
 
     outputs:
       releases: ${{ steps.prepare-matrix.outputs.releases }}
