--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,7 +27,17 @@ jobs:
         id: get-commit-hash
         run: echo "hash=$(git rev-parse HEAD)" >> "$GITHUB_OUTPUT"
 
-      # Creates git tags and publishes the crates of the new releases
+      - name: Dry Run
+        id: dry-run
+        uses: MarcoIeni/release-plz-action@fff938ea2923fdfa35797fff63537b00f30fe6f9 # v0.5.82
+        with:
+          command: release --dry-run
+          version: "0.3.105"
+        env:
+          CARGO_NET_GIT_FETCH_WITH_CLI: true
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+
       - name: Publish release
         id: publish-release
         uses: MarcoIeni/release-plz-action@fff938ea2923fdfa35797fff63537b00f30fe6f9 # v0.5.82
@@ -43,6 +53,10 @@ jobs:
         id: prepare-matrix
         run: |
           echo "releases=$(echo '${{ steps.publish-release.outputs.releases }}' | jq -c '.')" >> $GITHUB_OUTPUT
+          if [ "${{ steps.publish-release.outputs.releases }}" == "[]" ]; then
+            echo "release-plz output contains an empty release list — exiting early."
+            exit 1
+          fi
 
   build:
     needs: publish-release
