--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,7 +2,7 @@
 
 name: Release
 on:
-  workflow_dispatch: # Manual trigger only
+  workflow_dispatch:
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -56,8 +56,8 @@ jobs:
             echo "release-plz output contains an empty release list — exiting early."
             exit 1
           fi
-          echo "releases=$(echo '${{ steps.publish-release.outputs.releases }}' | jq -c '.')" >> $GITHUB_OUTPUT
 
+          echo "releases=$(echo '${{ steps.publish-release.outputs.releases }}' | jq -c '.')" >> $GITHUB_OUTPUT
 
   build:
     needs: publish-release
