--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,14 +1,7 @@
 # This workflow creates a github release using release-plz, and publishes it as a rust crates and also create the necessary artifacts (wasm).
-# It's triggered once a release PR (created by the create-release-pr workflow) gets merged to other release branches.
+
 name: Release
 on:
-  # Once the PR gets merged to `main` or other `releases` branches
-  pull_request:
-    branches:
-      - main
-      - "releases/**"
-    types: [closed]
-
   workflow_dispatch:
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
@@ -17,11 +10,6 @@ jobs:
   # Publishes a release in case the release isn't published
   publish-release:
     name: Publish releases
-
-    # Add checks to see if the merged PR is a release.
-    if: |
-      ((github.event.pull_request.merged == true) &&
-      contains(github.event.pull_request.labels.*.name, 'release'))
 
     runs-on: blacksmith-2vcpu-ubuntu-2204
 
@@ -35,14 +23,21 @@ jobs:
         with:
           token: ${{ secrets.PAT_TOKEN }}
 
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
-
       - name: Get commit hash
         id: get-commit-hash
         run: echo "hash=$(git rev-parse HEAD)" >> "$GITHUB_OUTPUT"
 
-      # Creates git tags and publishes the crates of the new releases
+      - name: Dry Run
+        id: dry-run
+        uses: MarcoIeni/release-plz-action@fff938ea2923fdfa35797fff63537b00f30fe6f9 # v0.5.82
+        with:
+          command: release --dry-run
+          version: "0.3.105"
+        env:
+          CARGO_NET_GIT_FETCH_WITH_CLI: true
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+
       - name: Publish release
         id: publish-release
         uses: MarcoIeni/release-plz-action@fff938ea2923fdfa35797fff63537b00f30fe6f9 # v0.5.82
@@ -57,6 +52,11 @@ jobs:
       - name: Prepare JSON output to be a matrix GHA format
         id: prepare-matrix
         run: |
+          if [ "${{ steps.publish-release.outputs.releases }}" == "[]" ]; then
+            echo "release-plz output contains an empty release list — exiting early."
+            exit 1
+          fi
+
           echo "releases=$(echo '${{ steps.publish-release.outputs.releases }}' | jq -c '.')" >> $GITHUB_OUTPUT
 
   build:
