--- a/contracts/stellar-token-manager/Cargo.toml
+++ b/contracts/stellar-token-manager/Cargo.toml
@@ -19,7 +19,7 @@ paste = { workspace = true }
 stellar-axelar-std = { workspace = true, features = ["testutils"] }
 
 [features]
-library = [] # Only export the contract interface
+library = [] # Exports only the contract interface
 
 [lints]
 workspace = true
