--- a/contracts/stellar-axelar-gateway/Cargo.toml
+++ b/contracts/stellar-axelar-gateway/Cargo.toml
@@ -26,7 +26,7 @@ rand_chacha = { version = "0.3" }
 stellar-axelar-std = { workspace = true, features = ["testutils"] }
 
 [features]
-library = [] # Only export the contract interface
+library = [] # Exports only the contract interface
 testutils = ["stellar-axelar-std/testutils", "dep:ed25519-dalek", "dep:rand"]
 
 [lints]
