--- a/contracts/stellar-axelar-operators/Cargo.toml
+++ b/contracts/stellar-axelar-operators/Cargo.toml
@@ -10,7 +10,7 @@ publish = true
 crate-type = ["cdylib", "rlib"]
 
 [features]
-library = [] # Only export the contract interface
+library = [] # Exports only the contract interface
 
 [dependencies]
 cfg-if = { workspace = true }
