--- a/contracts/stellar-upgrader/Cargo.toml
+++ b/contracts/stellar-upgrader/Cargo.toml
@@ -18,7 +18,7 @@ dummy-contract = { path = "src/tests/testdata/dummy-contract" }
 stellar-axelar-std = { workspace = true, features = ["testutils"] }
 
 [features]
-library = [] # Only export the contract interface
+library = [] # Exports only the contract interface
 testutils = ["stellar-axelar-std/testutils"]
 
 [lints]
