--- a/contracts/stellar-governance/Cargo.toml
+++ b/contracts/stellar-governance/Cargo.toml
@@ -15,6 +15,7 @@ stellar-axelar-std = { workspace = true }
 
 [dev-dependencies]
 goldie = { workspace = true }
+paste = { workspace = true }
 stellar-axelar-std = { workspace = true, features = ["testutils"] }
 
 [features]
