--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ stellar-axelar-std-derive = { version = "^1.1.2", path = "packages/stellar-axela
 stellar-interchain-token = { version = "^1.1.2", path = "contracts/stellar-interchain-token" }
 stellar-interchain-token-service = { version = "^1.2.0", path = "contracts/stellar-interchain-token-service" }
 stellar-token-manager = { version = "^1.1.2", path = "contracts/stellar-token-manager" }
+stellar-token-utils = { version = "^1.0.0", path = "contracts/stellar-token-utils" }
 stellar-multicall = { version = "^1.0.2", path = "contracts/stellar-multicall" }
 stellar-upgrader = { version = "^1.1.2", path = "contracts/stellar-upgrader" }
 
