--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -42,6 +42,7 @@ jobs:
         uses: baptiste0928/cargo-install@v2
         with:
           crate: cargo-sort
+          version: 1.0.9
 
       - name: Run cargo sort
         run: cargo-sort --workspace --check --check-format
