--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ proc-macro2 = { version = "1.0", default-features = false }
 rand = { version = "0.8.5", default-features = false }
 serde = { version = "1.0.152", default-features = false, features = ["derive"] }
 soroban-token-sdk = { version = "22.0.6" }
+stellar-strkey = { version = "0.0.8" }
 stellar-axelar-example = { version = "^1.0.4", path = "contracts/stellar-axelar-example" }
 stellar-axelar-gas-service = { version = "^1.1.2", path = "contracts/stellar-axelar-gas-service" }
 stellar-axelar-gateway = { version = "^1.1.2", path = "contracts/stellar-axelar-gateway" }
