--- a/.github/workflows/stellar-expert-release.yml
+++ b/.github/workflows/stellar-expert-release.yml
@@ -1,17 +1,3 @@
-
-jobs:
-  release-contract-a:
-    uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
-    with:
-      release_name: ${{ github.ref_name }}          # use git tag as unique release name
-      release_description: 'Contract release'       # some boring placeholder text to attach
-      relative_path: '["src/my-awesome-contract"]'  # relative path to your really awesome contract
-      package: 'my-awesome-contract'                # package name to build
-      make_target: 'build-dependencies'             # make target to invoke
-    secrets:  # the authentication token will be automatically created by GitHub
-      release_token: ${{ secrets.GITHUB_TOKEN }}    # don't modify this line
-
-
 name: Stellar Expert WASM Release
 
 permissions:
@@ -22,15 +8,15 @@ permissions:
 on:
   push:
     tags:
-      - 'v*'  # triggered whenever a new tag (previxed with "v") is pushed to the repository
+      - "v*" # triggered whenever a new tag (previxed with "v") is pushed to the repository
 
 jobs:
   release-contract-stellar-axelar-example:
     uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
     with:
       release_name: ${{ github.ref_name }}
-      release_description: 'Axelar Example Release'
-      package: 'stellar-axelar-example'
+      release_description: "Axelar Example Release"
+      package: "stellar-axelar-example"
     secrets:
       release_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -38,8 +24,8 @@ jobs:
     uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
     with:
       release_name: ${{ github.ref_name }}
-      release_description: 'Axelar Gas Service Release'
-      package: 'stellar-axelar-gas-service'
+      release_description: "Axelar Gas Service Release"
+      package: "stellar-axelar-gas-service"
     secrets:
       release_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -47,8 +33,8 @@ jobs:
     uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
     with:
       release_name: ${{ github.ref_name }}
-      release_description: 'Axelar Gateway Release'
-      package: 'stellar-axelar-gateway'
+      release_description: "Axelar Gateway Release"
+      package: "stellar-axelar-gateway"
     secrets:
       release_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -56,8 +42,8 @@ jobs:
     uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
     with:
       release_name: ${{ github.ref_name }}
-      release_description: 'Axelar Operators Release'
-      package: 'stellar-axelar-operators'
+      release_description: "Axelar Operators Release"
+      package: "stellar-axelar-operators"
     secrets:
       release_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -65,8 +51,8 @@ jobs:
     uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
     with:
       release_name: ${{ github.ref_name }}
-      release_description: 'Interchain Token Release'
-      package: 'stellar-interchain-token'
+      release_description: "Interchain Token Release"
+      package: "stellar-interchain-token"
     secrets:
       release_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -74,8 +60,8 @@ jobs:
     uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
     with:
       release_name: ${{ github.ref_name }}
-      release_description: 'Interchain Token Service Release'
-      package: 'stellar-interchain-token-service'
+      release_description: "Interchain Token Service Release"
+      package: "stellar-interchain-token-service"
     secrets:
       release_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -83,8 +69,8 @@ jobs:
     uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
     with:
       release_name: ${{ github.ref_name }}
-      release_description: 'Multicall Release'
-      package: 'stellar-multicall'
+      release_description: "Multicall Release"
+      package: "stellar-multicall"
     secrets:
       release_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -92,8 +78,8 @@ jobs:
     uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
     with:
       release_name: ${{ github.ref_name }}
-      release_description: 'Token Manager Release'
-      package: 'stellar-token-manager'
+      release_description: "Token Manager Release"
+      package: "stellar-token-manager"
     secrets:
       release_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -101,8 +87,8 @@ jobs:
     uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
     with:
       release_name: ${{ github.ref_name }}
-      release_description: 'Token Utils Release'
-      package: 'stellar-token-utils'
+      release_description: "Token Utils Release"
+      package: "stellar-token-utils"
     secrets:
       release_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -110,7 +96,7 @@ jobs:
     uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
     with:
       release_name: ${{ github.ref_name }}
-      release_description: 'Upgrader Release'
-      package: 'stellar-upgrader'
+      release_description: "Upgrader Release"
+      package: "stellar-upgrader"
     secrets:
       release_token: ${{ secrets.GITHUB_TOKEN }}
