--- a/.github/workflows/stellar-expert-release.yml
+++ b/.github/workflows/stellar-expert-release.yml
@@ -1,3 +1,25 @@
+# Stellar Expert WASM Release Workflow
+#
+# This workflow automatically builds and releases WASM contracts for all stellar packages
+# when a new version tag is pushed to the repository using the stellar-expert/soroban-build-workflow.
+#
+# Workflow Behavior:
+# 1. Triggered on push of tags starting with "v" (e.g., v1.0.0-stellar-axelar-example)
+# 2. Creates parallel release jobs for each stellar contract package
+# 3. Each job uses stellar-expert/soroban-build-workflow to:
+#    - Compile smart contracts for Soroban WASM runtime
+#    - Create optimized WebAssembly files ready for deployment
+#    - Publish GitHub releases with attached build artifacts
+#    - Include SHA256 hashes of compiled WASM files for verification
+#    - Generate and upload build attestations
+# 4. All jobs run in parallel for faster execution
+# 5. Uses the tag name as the release version (e.g., v1.0.0-stellar-axelar-example)
+#
+# Permissions:
+# - id-token: Required for WASM signing and attestation
+# - contents: Required to create releases and upload artifacts
+# - attestations: Required for security attestations
+
 name: Stellar Expert WASM Release
 
 permissions:
@@ -11,92 +33,24 @@ on:
       - "v*" # triggered whenever a new tag (previxed with "v") is pushed to the repository
 
 jobs:
-  release-contract-stellar-axelar-example:
+  release-contract:
     uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
+    strategy:
+      matrix:
+        package:
+          - stellar-axelar-example
+          - stellar-axelar-gas-service
+          - stellar-axelar-gateway
+          - stellar-axelar-operators
+          - stellar-interchain-token
+          - stellar-interchain-token-service
+          - stellar-multicall
+          - stellar-token-manager
+          - stellar-token-utils
+          - stellar-upgrader
     with:
       release_name: ${{ github.ref_name }}
-      release_description: "Axelar Example Release"
-      package: "stellar-axelar-example"
-    secrets:
-      release_token: ${{ secrets.GITHUB_TOKEN }}
-
-  release-contract-stellar-axelar-gas-service:
-    uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
-    with:
-      release_name: ${{ github.ref_name }}
-      release_description: "Axelar Gas Service Release"
-      package: "stellar-axelar-gas-service"
-    secrets:
-      release_token: ${{ secrets.GITHUB_TOKEN }}
-
-  release-contract-stellar-axelar-gateway:
-    uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
-    with:
-      release_name: ${{ github.ref_name }}
-      release_description: "Axelar Gateway Release"
-      package: "stellar-axelar-gateway"
-    secrets:
-      release_token: ${{ secrets.GITHUB_TOKEN }}
-
-  release-contract-stellar-axelar-operators:
-    uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
-    with:
-      release_name: ${{ github.ref_name }}
-      release_description: "Axelar Operators Release"
-      package: "stellar-axelar-operators"
-    secrets:
-      release_token: ${{ secrets.GITHUB_TOKEN }}
-
-  release-contract-stellar-interchain-token:
-    uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
-    with:
-      release_name: ${{ github.ref_name }}
-      release_description: "Interchain Token Release"
-      package: "stellar-interchain-token"
-    secrets:
-      release_token: ${{ secrets.GITHUB_TOKEN }}
-
-  release-contract-stellar-interchain-token-service:
-    uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
-    with:
-      release_name: ${{ github.ref_name }}
-      release_description: "Interchain Token Service Release"
-      package: "stellar-interchain-token-service"
-    secrets:
-      release_token: ${{ secrets.GITHUB_TOKEN }}
-
-  release-contract-stellar-multicall:
-    uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
-    with:
-      release_name: ${{ github.ref_name }}
-      release_description: "Multicall Release"
-      package: "stellar-multicall"
-    secrets:
-      release_token: ${{ secrets.GITHUB_TOKEN }}
-
-  release-contract-stellar-token-manager:
-    uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
-    with:
-      release_name: ${{ github.ref_name }}
-      release_description: "Token Manager Release"
-      package: "stellar-token-manager"
-    secrets:
-      release_token: ${{ secrets.GITHUB_TOKEN }}
-
-  release-contract-stellar-token-utils:
-    uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
-    with:
-      release_name: ${{ github.ref_name }}
-      release_description: "Token Utils Release"
-      package: "stellar-token-utils"
-    secrets:
-      release_token: ${{ secrets.GITHUB_TOKEN }}
-
-  release-contract-stellar-upgrader:
-    uses: stellar-expert/soroban-build-workflow/.github/workflows/release.yml@main
-    with:
-      release_name: ${{ github.ref_name }}
-      release_description: "Upgrader Release"
-      package: "stellar-upgrader"
+      release_description: "${{ matrix.package }} Release"
+      package: ${{ matrix.package }}
     secrets:
       release_token: ${{ secrets.GITHUB_TOKEN }}
