--- a/contracts/stellar-axelar-example/Cargo.toml
+++ b/contracts/stellar-axelar-example/Cargo.toml
@@ -25,6 +25,7 @@ stellar-axelar-gas-service = { workspace = true, features = ["testutils"] }
 stellar-axelar-gateway = { workspace = true, features = ["testutils"] }
 stellar-axelar-std = { workspace = true, features = ["testutils"] }
 stellar-interchain-token-service = { workspace = true, features = ["testutils"] }
+stellar-interchain-token = { workspace = true }
 
 [lints]
 workspace = true
